# Dyna-Kinematics

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  LICENSE  Makefile  README.md
VS2019_solution/: 2D-Rigid-Body-Simulator.sln  2D-Rigid-Body-Simulator.vcxproj  2D-Rigid-Body-Simulator.vcxproj.filters  Teapong.sln  Teapong.vcxproj  Teapong.vcxproj.filters
dependencies/mac/lib/: ikpFLAC.dylib  ikpMP3.dylib  libirrklang.dylib
dependencies/win/dll/: .gitignore
dependencies/win/lib/: .gitignore
inc/: ball.h  camera.h  collision.h  finite_state_machine.h  game.h  game_object_2D.h  game_object_3D.h  menu_state.h  mesh.h  model.h  model_loader.h  movable_game_object_2D.h  movable_game_object_3D.h  paddle.h  pause_state.h  play_state.h  renderer_2D.h  resource_manager.h  rigid_body_2D.h  rigid_body_simulator.h  shader.h  shader_loader.h  state.h  texture.h  texture_loader.h  wall.h  win_state.h  window.h  world.h
qrc/: rigid_body_simulator.qrc
resources/models/: .gitignore
resources/models/left_paddle_wins/: left_paddle_wins.mtl
resources/shaders/: color_2D.fs  color_2D.vs  game_object_2D.fs  game_object_3D.fs  game_object_3D.vs  game_object_3D_explosive.gs  line_2D.fs  line_2D.vs  texture_2D.vs
src/: ball.cpp  camera.cpp  collision.cpp  finite_state_machine.cpp  game.cpp  game_object_2D.cpp  game_object_3D.cpp  glad.c  main.cpp  menu_state.cpp  mesh.cpp  model.cpp  model_loader.cpp  movable_game_object_2D.cpp  movable_game_object_3D.cpp  paddle.cpp  pause_state.cpp  play_state.cpp  renderer_2D.cpp  rigid_body_2D.cpp  rigid_body_simulator.cpp  shader.cpp  shader_loader.cpp  stb_image.cpp  texture.cpp  texture_loader.cpp  wall.cpp  win_state.cpp  window.cpp  world.cpp
ui/: rigid_body_simulator.ui
(+11 files in other folders)
